--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stellars的小站</title>
     <link type="text/css" rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
-
+    <script src="script.js"></script>
     <div class="header">
         <div id="title">
             Stellars的小站
@@ -19,13 +20,15 @@
             Where the rocket launchs.
         </div>
     </div>
-    <div id="tips">
-        悄悄地告诉你：这里啥都没有
+    <input id="input-title">
+    <div id="article">
+        <button onclick="createEle()">click</button>
     </div>
 
     <div class="footer">
         Email:2897044280@qq.com <br> QQ:2897044280
     </div>
+
 </body>
 
 </html>
