Almost Full Index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <input id="input-title">
     <div id="article">
-        <button onclick="createEle()">click</button>
+        <button onclick="createArticle()">click</button>
     </div>
 
     <div class="footer">
