--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <input id="input-title">
     <div id="article">
-        <button onclick="createArticle()">click</button>
+        <button onclick="createArticle()">在上面输入字再点击这里就会出现意想不到的事哦！</button>
     </div>
 
     <div class="footer">
