--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <div id="article">
         <button onclick="createArticle()">在上面输入字再点击这里就会出现意想不到的事哦！</button>
     </div>
+    <div style="margin-right:0%">
+        <picture href="a.jpg"></picture>
+    </div>
 
     <div class="footer">
         Email:2897044280@qq.com <br> QQ:2897044280
