--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button onclick="createArticle()">在上面输入字再点击这里就会出现意想不到的事哦！</button>
     </div>
     <div style="margin-right:0%">
-        <picture href="a.jpg"></picture>
+        <img src="a.jpg">
     </div>
 
     <div class="footer">
