--- a/index.html
+++ b/index.html
@@ -19,19 +19,15 @@
         <div id="intro">
             Where the rocket launchs.
         </div>
-    </div>
-    <input id="input-title">
-    <div id="article">
-        <button onclick="createArticle()">在上面输入字再点击这里就会出现意想不到的事哦！</button>
-    </div>
-    <div style="margin-right:0%">
-        <img id="chenxu" src="a.jpg">
+
+        <div id="contact">KC@StellarSpace</div>
     </div>
 
-    <div class="footer">
-        Email:2897044280@qq.com <br> QQ:2897044280
+    <div id="articles">
+        <div id="main-title">最新文章</div>
+        <div class="line"></div>
+        
     </div>
-
 </body>
 
 </html>
